<resources>
    <string name="app_name">NasGradApp</string>
    <string name="map_api_key">AIzaSyCc8eUyKVRYDY5NISTF8-lavfCdp-y86u0</string>

    <!-- Main -->
    <string name="report_an_issue">Report an issue</string>
    <string name="next">Next</string>

    <!-- Location -->
    <string name="issue_location_title">Choose Location</string>
    <string name="issue_location_explanation">Move the map to pick place where problem is located</string>
    <string name="issue_location_current">Current Location</string>

    <string name="unknown_location">Unnown location</string>

    <!-- Photo -->
    <string name="issue_add_photo_title">Add Photo</string>
    <string name="issue_add_photo_explanation">Take photo or use existing photo from your phone</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>

    <!-- Description -->
    <string name="issue_description_title">Description</string>
    <string name="issue_description_explanation">Add a title and detailed description of an issue to help us to successfully resolve this issue</string>
    <string name="title_label">Title</string>
    <string name="issue_title_input_hint">Type here title for an issue</string>
    <string name="issue_description_input_hint">Type here description for an issue</string>
    <string name="title_description">Description</string>

    <string name="title_activity_create_issue">CreateIssue</string>
    <string name="create_issue_page_indicator">%1$d/4</string>

    <string name="report_issue">Prijavi Problem</string>
    <string name="screen_title_issue_summary">Pregledaj problem</string>

    <string name="issue_type">Tip problema: %1$s</string>
    <string name="issue_categories">Kategorije: %1$s</string>
    <string name="issue_address">Adresa: %1$s</string>

    <string name="lorem_ipsum_paragraph" translatable="false">Sed egestas nunc nec urna rhoncus lobortis. Donec nec aliquet neque. Aliquam et accumsan dolor. Fusce mollis justo eget dapibus ultrices. Cras ut orci tortor. Sed eu odio molestie ante eleifend sollicitudin id ut eros. Cras eget quam nisi.</string>



    <!-- Twitter -->
    <string name="tweetText">Kreiran je problem u @NasGradApp - %1$s. Slike, lokaciju i opis pogledaj na veb stranici: https://nasgrad.app/issuedetail/%2$s #nasGradApp</string>
    <string name="tweet_text_type">text/plain</string>
    <string name="twitter_app_package_name">com.twitter.android</string>
    <string name="twitter_app_not_found">Twitter aplikacija nije pronadjena</string>
    <string name="send_tweet_base_url">https://twitter.com/intent/tweet?text=</string>

    <!-- Email -->
    <string name="email_address">jkpzelenilosrbija@srbija.rs</string>
    <string name="nas_grad_email_address">nas-grad-app@gmail.com</string>
    <string name="email_subject">Komunalna prijava (#NasGradApp %1$s)</string>
    <string name="email_body" translatable="false">
        Poštovani,\n\nŽelela / Želeo bih da prijavim sledeći problem - %1$s.\n\nDetalje problema (opis, slike i lokaciju na mapi) možete videti na sledećoj vebsajt stranici:
        \n\nhttps://nasgrad.app/issuedetail/%2$s.\n\nHvala Vam unapred
    </string>
    <string name="email_template">mailto:%1$s?cc=%2$s&amp;subject=%3$s&amp;body=%4$s</string>

</resources>
