<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/explanation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/issue_description_explanation"
        android:textAppearance="@style/Montserrat.Small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/title_label"
        android:textAppearance="@style/Montserrat.Small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/explanation" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/issueTitleLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="16dp"
        app:boxStrokeColor="@color/editTextColor"
        app:counterEnabled="true"
        app:counterMaxLength="32"
        app:counterOverflowTextAppearance="@style/Montserrat.Small"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/issueTitle"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:hint="@string/issue_title_input_hint"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLength="32"
            android:textAppearance="@style/Montserrat.Small"
            android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/title_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:text="@string/title_description"
        android:textAppearance="@style/Montserrat.Small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/issueTitleLayout" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="16dp"
        app:boxStrokeColor="@color/editTextColor"
        app:counterEnabled="true"
        app:counterMaxLength="600"
        app:counterOverflowTextAppearance="@style/Montserrat.Small"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/issueDescription"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="top"
            android:hint="@string/issue_description_input_hint"
            android:inputType="textMultiLine"
            android:maxLength="600"
            android:textAppearance="@style/Montserrat.Small"
            android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>

    <include
        android:id="@+id/include"
        layout="@layout/create_issue_bottom_navigation_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>